fix: changes as per wsdl

--- a/HL7ParserService/HL7ParserService.csproj
+++ b/HL7ParserService/HL7ParserService.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>true</ImplicitUsings>
+    <RootNamespace>$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <Using Include="CoreWCF" />
